--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
     height:auto;
     font-family: "-윤고딕110", sans-serif;
     font-size:14px;
-    overflow: hidden;
 }
 
 #remote{
@@ -46,10 +45,10 @@
 }
 
 .c1_img li:nth-child(1)>img{
-    width:676px;
-    height:894px;
+    width:100%;
+    height:auto;
     margin-left:-10%;
-    margin-top:10%;
+    margin-top:10%; 
 }
 
 .c1_text{
@@ -72,7 +71,7 @@
 
 .c1_guide{
     position: relative;
-    bottom:20%;
+    bottom:24%;
     left:10%;
     width:70%;
     height:auto;    
@@ -90,13 +89,14 @@
     color:#fff;
     font-family: "-윤고딕130", sans-serif;
     font-size:1.714em;
+    padding-bottom:40px;    
     line-height:32px;
 }
 
 
 #conts2{
     width:100%;
-    height:990px;
+    height:auto;
     background:#f7f7e2;
     margin:0 auto;
 }
@@ -104,7 +104,7 @@
 
 #conts3{
     width:100%;
-    height:990px;
+    height:auto;
     background:#f7f7e2;
     margin:0 auto;
 }
@@ -113,7 +113,7 @@
 #conts4{
     position: relative;
     width:100%;
-    height:990px;
+    height:auto;
     background:#e9eadc;
 }
 
@@ -144,7 +144,7 @@
 #conts5{
     position: relative;
     width:100%;
-    height:990px;
+    height:auto;;
     background:#e9eadc;
 }
 
@@ -172,7 +172,7 @@
 #conts6{
     position: relative;
     width:100%;
-    height:990px;
+    height:auto;;
     background:#e9eadc;
 }
 
@@ -198,7 +198,7 @@
 
 #conts7{
     width:100%;
-    height:990px;
+    height:auto;;
     background:#e9eadc;
 }
 
@@ -208,7 +208,7 @@
 
 #conts8{
     width:100%;
-    height:990px;
+    height:auto;
     background:#e9eadc;
 }
 
@@ -218,7 +218,7 @@
 
 #conts9{
     width:100%;
-    height:990px;
+    height:auto;
     background:#e9eadc;
 }
 
@@ -228,7 +228,7 @@
 
 #conts10{
     width:100%;
-    height:990px;
+    height:auto;
     background:#e9eadc;
 }
 
@@ -245,7 +245,7 @@ footer{
 .footerIn{
     position: relative;
     width:70%;
-    height:50px;
+    height:auto;
     margin:0 auto;
     top:50%;
     transform: translateY(-50%);   
