--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 @charset "utf-8";
 
-
 #wrap{
     width:100%; 
-    min-width:1100px; 
+    min-width:1200px;
     height:auto;
     font-family: "-윤고딕110", sans-serif;
     font-size:14px;
@@ -50,6 +49,7 @@
     display:block;
     width:676px;
     height:894px;
+    margin-left:-10%;
     margin-top:10%; 
     background:url("../img/e_pluse.png") no-repeat center / cover;
 }
@@ -240,5 +240,6 @@ footer{
     line-height:21px;
     -webkit-font-smoothing: antialiased;
     -ms-font-smoothing: antialiased; 
-    
-}
+ 
+    }
+
