--- a/css/style.css
+++ b/css/style.css
@@ -246,8 +246,29 @@ footer{
     -ms-font-smoothing: antialiased; 
 }
  
+@media all and (min-width:768px){
+    
+#conts4 a{    
+    top:40%;
+    right:25%;
+    }
+
+    
+#conts5 a{    
+    top:40%;
+    right:25%;
+}
+
+/* 포트폴리오3 page  */
+
+#conts6 a{
+    top:40%;
+    right:25%;
+    }
+}
 
 @media all and (min-width:1200px){
+
 
 /* 포트폴리오1 바로가기 버튼  */
 
@@ -255,54 +276,21 @@ footer{
     display:block;
 }
 
-#conts4 a{
-    position: absolute;
-    font-family: "-윤고딕150",sans-serif;
+#conts4 a{    
     top:40%;
     right:33%;
-    display:block;
-    font-size:1.143em;
-    width:170px;
-    height:34px;
-    border-radius:10px;
-    text-align:center;
-    line-height:34px;
-    background:#006699;  
-    color:#fff; 
 }
 
-#conts5 a{
-    position: absolute;
-    font-family: "-윤고딕150",sans-serif;
+#conts5 a{    
     top:40%;
     right:33%;
-    display:block;
-    font-size:1.143em;
-    width:170px;
-    height:34px;
-    border-radius:10px;
-    text-align:center;
-    line-height:34px;
-    background:#336633;  
-    color:#fff; 
 }
 
 /* 포트폴리오3 page  */
 
 #conts6 a{
-    position: absolute;
-    font-family: "-윤고딕150",sans-serif;
     top:40%;
     right:33%;
-    display:block;
-    font-size:1.143em;
-    width:170px;
-    height:34px;
-    border-radius:10px;
-    text-align:center;
-    line-height:34px;
-    background:#669966;  
-    color:#fff; 
     }
 }
 
